--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -9,6 +9,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css">
     <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+      <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
       {#      medium editor#}
         <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/medium-editor@latest/dist/css/medium-editor.min.css" type="text/css" media="screen" charset="utf-8">
       <link rel="stylesheet" href="{% static 'css/blog.css' %}">
@@ -16,18 +17,25 @@
       <link href="https://fonts.googleapis.com/css?family=Montserrat|Russo+One" rel="stylesheet">
   </head>
   <body>
-    <nav class="navbar navbar-default techfont custom-navbar">
-    <div class="container">
+  <nav class="navbar navbar-expand-lg navbar-light bg-light techfont custom-navbar">
+  <a class='navbar-brand bigbrand' href="{% url 'post-list' %}">My Tech blog</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
 
-
-      <ul class="nav navbar-nav">
-        <li><a class='navbar-brand bigbrand' href="{% url 'post_list' %}">My Tech blog</a></li>
-        <li><a href="{% url 'about'%}">About</a></li>
-        <li><a href="https://www.github.com">Github</a></li>
-        <li><a href="https://www.linkedin.com">LinkedIn</a></li>
-
-      </ul>
-
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item active">
+        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Link</a>
+      </li>
+      <li class="nav-item dropdown">
+        <li class="nav-item"><a class="nav-link" href="{% url 'about'%}">About</a></li>
+        <li class="nav-item"><a class="nav-link" href="https://www.github.com">Github</a></li>
+        <li class="nav-item"><a class="nav-link"https://www.linkedin.com">LinkedIn</a></li>
+    </ul>
       <ul class="nav navbar-nav navbar-right">
         {% if user.is_authenticated %}
         <li>
@@ -45,7 +53,7 @@
           <a >Welcome: {{ user.username }}</a>
         </li>
           {% else %}
-          <li><a class='nav navbar-right' href="{% url 'login' %}" ><span class="glyphicon glyphicon-user"></span></a></li>
+          <li><a class='nav navbar-right' href="{% url 'login' %}" ><i class="fas fa-user"></i></a></li>
         {% endif %}
 
       </ul>
