--- a/blog/templates/blog/post-detail.html
+++ b/blog/templates/blog/post-detail.html
@@ -2,22 +2,22 @@
 
 {% block content %}
     <h1 class="posttitle loader">{{ post.title }}</h1>
-    {% if post.pubpublished_date %}
+    {% if post.published_date %}
         <div class="date postdate">
-        {{ post.pubpublished_date }}
+            <p>{{post.published_date}}</p>
         </div>
     {% else %}
         <a href="{% url 'post_publish'  pk=post.pk %}" class="btn btn-primary">Publish</a>
     {% endif %}
 
-    <p class="postcontent">{{ post.title|safe|linebreaksbr }}</p>
+    <p class="postcontent">{{ post.text|safe|linebreaksbr }}</p>
 
     {% if user.is_authenticated %}
         <a href="{% url 'post-update' pk=post.pk%}" class="btn btn-primary">
-            <span class="glyphicon glyphicon-pencil"></span>
+            <i class="far fa-edit"></i></span>
         </a>
         <a href="{% url 'post-remove' pk=post.pk%}" class="btn btn-danger">
-            <span class="glyphicon glyphicon-remove"></span>
+            <i class="far fa-minus-square"></i></span>
         </a>
     {% endif %}
     <hr>
@@ -28,11 +28,11 @@
             {%if user.is_authenticated or  comment.approved_comment.all %}
                 {{ comment.create_date }}
                 {% if not  comment.approved_comment %}
-                    <a href="{% url 'remove_comment' pk=comment.pk%}" class="btn btn-default">
-                        <span class="glyphicon glyphicon-remove"></span>
+                    <a href="{% url 'remove_comment' pk=comment.pk%}" class="btn btn-danger">
+                        <i class="far fa-minus-square"></i>
                     </a>
-                    <a href="{% url 'comment_approve' pk=comment.pk%}" class="btn btn-danger">
-                        <span class="glyphicon glyphicon-ok"></span>
+                    <a href="{% url 'comment_approve' pk=comment.pk%}" class="btn btn-primary">
+                        <i class="far fa-check-circle"></i>
                     </a>
                 {% endif %}
                 <p>{{ comment.text|safe|linebreaksbr }}</p>
